...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.headlines.HeadlinesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHeadlines"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60dp"
        android:background="@color/black"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
