...
        android:textColor="@color/heading"
        android:textSize="@dimen/sp_20sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@+id/description" />

    <TextView
        android:id="@+id/tvDetailsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_64dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:textColor="@color/heading"
        android:textSize="@dimen/sp_24sp"
...
